<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <view
        android:id="@+id/view"
        class="android.view.View"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/editText_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textview_encrypted_link"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:text="@string/link" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonPaste"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="@string/paste" />

                <Button
                    android:id="@+id/button_encrypt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/encrip" />

            </LinearLayout>


            <Button
                android:id="@+id/buttonCopy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy" />

            <Button
                android:id="@+id/buttonShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share" />
        </LinearLayout> <!-- Sesuaikan dengan kebutuhan padding -->

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/textViewInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="5dp"
            android:text="@string/petunjuk" />
    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="132dp"
        android:layout_height="134dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/encripter" />

    <TextView
        android:id="@+id/textView"
        android:textColor="@color/white"
        android:layout_width="190dp"
        android:layout_height="139dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/header"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>